# inamute

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.deploy  README.md
account/: .env.example  package.json  pnpm-lock.yaml
account/src/: middleware.ts
account/src/lib/: api-keys.ts  auth.ts  db.ts
account/src/pages/: index.astro
account/src/pages/account/: index.astro  login.astro
k8s/: app-secrets.yaml  cnpg-cluster.yaml  db-credentials.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
migrations/: 001_schema.sql  002_seed_data.sql  003_account_auth.sql
src/: main.rs
static/: index.html
