[package]
name = "inamute"
version = "0.1.0"
edition = "2021"
description = "Indonesian Commute Schedule API"
license = "GPL-3.0"
repository = "https://github.com/ilmimris/inamute"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-service = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "1"
futures = "0.3"
dotenvy = "0.15"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
